feat(quality): configurar Checkstyle, PMD y SpotBugs con 0 violaciones
- Mueve checkstyle.xml a config/checkstyle/ y configura en build.gradle
- Agrega config/pmd/ruleset.xml compatible con Java 17, Spring Boot 3 y Lombok
- Agrega config/spotbugs/exclude.xml con filtros para falsos positivos Lombok/JPA
- Agrega sonar-project.properties para integracion con SonarQube
- Corrige AvoidStarImport en 14 clases (entidades, eventos, DTOs)
- Corrige NewlineAtEndOfFile en 49 archivos Java
- Corrige ConstantName, NeedBraces, GenericWhitespace, WhitespaceAfter
- Corrige PMD: SimplifyBooleanReturns, UnnecessaryAnnotationValueElement,
  ConsecutiveLiteralAppends, InsufficientStringBufferDeclaration,
  AppendCharacterWithChar, PreserveStackTrace, UnusedImports
- Sin cambios en logica de negocio, endpoints, DTOs ni configuracion de seguridad

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>